Correction WeasyPrint et etat des lieux - Import WeasyPrint dynamique pour eviter erreurs au demarrage - Suppression des checkboxes pre-remplies dans etat des lieux - Migration des nouveaux modeles ContratKbis et EtatLieuxKbis - Serveur Django fonctionnel

--- a/templates/contrats/contrat_kbis.html
+++ b/templates/contrats/contrat_kbis.html
@@ -263,16 +263,16 @@
                 <tr>
                     <td>1</td>
                     <td>INDEXE DU COMPTEUR DE SONABEL</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.indexe_sonabel %}✓{% endif %}</td>
-                    <td class="checkbox">{% if not contrat_kbis.etat_lieux.indexe_sonabel %}✗{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>INDEXE DU COMPTEUR DE L'ONEA</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.indexe_onea %}✓{% endif %}</td>
-                    <td class="checkbox">{% if not contrat_kbis.etat_lieux.indexe_onea %}✗{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -281,78 +281,78 @@
                     <td>ETAT DE LA PEINTURE</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.peinture_murs == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.peinture_murs == 'PASSABLE' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>ETAT DE PEINTURE DES COUVERTURES</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.peinture_couvertures == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.peinture_couvertures == 'PASSABLE' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>PEINTURE DU PLAFOND</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.peinture_plafond == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.peinture_plafond == 'PASSABLE' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>6</td>
                     <td>ETAT DE CREMONE DE VITRE</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.cremone_vitre == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.cremone_vitre == 'PASSABLE' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>7</td>
                     <td>ETAT DE PRISE ELECTRIQUE</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.prise_electrique == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.prise_electrique == 'PASSABLE' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>8</td>
                     <td>NOMBRE DES CLES DU GRAND PORTAIL</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.cles_grand_portail %}✓{% endif %}</td>
-                    <td class="checkbox">{% if not contrat_kbis.etat_lieux.cles_grand_portail %}✗{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>9</td>
                     <td>NOMBRE DES CLES DE LA PORTE DU SALON</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.cles_porte_salon %}✓{% endif %}</td>
-                    <td class="checkbox">{% if not contrat_kbis.etat_lieux.cles_porte_salon %}✗{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>10</td>
                     <td>NOMBRE DES CLES ISO PLANES</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.cles_iso_planes %}✓{% endif %}</td>
-                    <td class="checkbox">{% if not contrat_kbis.etat_lieux.cles_iso_planes %}✗{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>11</td>
                     <td>PORTE RIDEAU</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.porte_rideau %}✓{% endif %}</td>
-                    <td class="checkbox">{% if not contrat_kbis.etat_lieux.porte_rideau %}✗{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>12</td>
                     <td>NOMBRE DES CLES DU PLACARD</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.cles_placard %}✓{% endif %}</td>
-                    <td class="checkbox">{% if not contrat_kbis.etat_lieux.cles_placard %}✗{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -361,112 +361,112 @@
                     <td>NOMBRE DE REGLETTES</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.reglettes == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.reglettes == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>14</td>
                     <td>NOMBRE DE VEILLEUSE</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.veilleuses == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.veilleuses == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>15</td>
                     <td>NOMBRE DE VENTILATEURS</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.ventilateurs == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.ventilateurs == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>16</td>
                     <td>ROBINETS DE LA CUISINE</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.robinets_cuisine == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.robinets_cuisine == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>17</td>
                     <td>LES DES PLACARDS DE LA CUISINE</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.placards_cuisine == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.placards_cuisine == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>18</td>
                     <td>ETAT DE LA SONNERIE</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.sonnerie == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.sonnerie == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>19</td>
                     <td>LES WC</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.wc == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.wc == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>20</td>
                     <td>LES LAVABOS</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.lavabos == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.lavabos == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>21</td>
                     <td>LE MIROIR</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.miroir == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.miroir == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>22</td>
                     <td>FLEXIBLE DE DOUCHE (COLONNE)</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.flexible_douche == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.flexible_douche == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>23</td>
                     <td>LES ACCESSOIRES (porte savon, porte serviette, porte papier de toilette)</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.accessoires_sanitaires == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.accessoires_sanitaires == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>24</td>
                     <td>LAMPES SANITAIRE</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.lampes_sanitaire == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.lampes_sanitaire == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>25</td>
                     <td>CHAUFFE-EAU</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.chauffe_eau == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.chauffe_eau == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
                 <tr>
                     <td>26</td>
                     <td>CLIMATISEUR (entretien)</td>
                     <td></td>
                     <td></td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.climatiseur == 'OK' %}✓{% endif %}</td>
-                    <td class="checkbox">{% if contrat_kbis.etat_lieux.climatiseur == 'NON' %}✓{% endif %}</td>
+                    <td class="checkbox"></td>
+                    <td class="checkbox"></td>
                 </tr>
             </tbody>
         </table>
