Ajuster image en-tÃªte et pied de page sur toute la largeur A5

--- a/templates/paiements/document_unifie_a5_complet.html
+++ b/templates/paiements/document_unifie_a5_complet.html
@@ -36,7 +36,7 @@
         
         /* En-tête avec image statique */
         .header {
-            text-align: center;
+            text-align: left;
             border-bottom: 2px solid #2c5aa0;
             padding-bottom: 2mm;
             margin-bottom: 3mm;
@@ -47,10 +47,11 @@
         }
         
         .header-image {
-            max-width: 100%;
+            width: 100%;
             height: auto;
             max-height: 40px;
             margin-bottom: 2mm;
+            object-fit: cover;
         }
         
         .company-name {
@@ -59,6 +60,7 @@
             color: #000;
             margin-bottom: 2mm;
             text-transform: uppercase;
+            text-align: left;
         }
         
         .company-slogan {
@@ -66,6 +68,7 @@
             color: #000;
             font-weight: bold;
             margin-bottom: 2mm;
+            text-align: left;
         }
         
         /* Titre du document */
@@ -221,7 +224,7 @@
         /* Pied de page */
         .footer {
             margin-top: 2mm;
-            text-align: center;
+            text-align: left;
             font-size: 6px;
             color: #000;
             border-top: 1px solid #000;
@@ -234,24 +237,28 @@
             font-weight: 900;
             margin-bottom: 1mm;
             color: #000;
+            text-align: left;
         }
         
         .footer-address {
             margin-bottom: 1mm;
             color: #000;
             font-weight: bold;
+            text-align: left;
         }
         
         .footer-contact {
             margin-bottom: 1mm;
             color: #000;
             font-weight: bold;
+            text-align: left;
         }
         
         .footer-legal {
             font-size: 5px;
             color: #000;
             font-weight: bold;
+            text-align: left;
         }
         
         .footer-generation {
@@ -259,6 +266,7 @@
             font-style: italic;
             color: #000;
             font-weight: bold;
+            text-align: left;
         }
         
         /* Filigrane */
