--- a/templates/paiements/document_unifie_a5_complet.html
+++ b/templates/paiements/document_unifie_a5_complet.html
@@ -36,7 +36,7 @@
         
         /* En-tête avec image statique */
         .header {
-            text-align: left;
+            text-align: center;
             border-bottom: 2px solid #2c5aa0;
             padding-bottom: 2mm;
             margin-bottom: 3mm;
@@ -49,9 +49,10 @@
         .header-image {
             width: 100%;
             height: auto;
-            max-height: 40px;
+            max-height: 50px;
             margin-bottom: 2mm;
-            object-fit: cover;
+            object-fit: contain;
+            display: block;
         }
         
         .company-name {
@@ -60,7 +61,7 @@
             color: #000;
             margin-bottom: 2mm;
             text-transform: uppercase;
-            text-align: left;
+            text-align: center;
         }
         
         .company-slogan {
@@ -68,7 +69,7 @@
             color: #000;
             font-weight: bold;
             margin-bottom: 2mm;
-            text-align: left;
+            text-align: center;
         }
         
         /* Titre du document */
@@ -224,7 +225,7 @@
         /* Pied de page */
         .footer {
             margin-top: 2mm;
-            text-align: left;
+            text-align: center;
             font-size: 6px;
             color: #000;
             border-top: 1px solid #000;
@@ -237,28 +238,28 @@
             font-weight: 900;
             margin-bottom: 1mm;
             color: #000;
-            text-align: left;
+            text-align: center;
         }
         
         .footer-address {
             margin-bottom: 1mm;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: center;
         }
         
         .footer-contact {
             margin-bottom: 1mm;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: center;
         }
         
         .footer-legal {
             font-size: 5px;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: center;
         }
         
         .footer-generation {
@@ -266,7 +267,7 @@
             font-style: italic;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: center;
         }
         
         /* Filigrane */
